# clv-prediction-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: data_exploration.ipynb
