[tool.poetry]
name = "clv-pkg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.2"
numpy = "^2.3.3"
scikit-learn = "^1.7.2"
xgboost = "^3.0.5"
dbt-bigquery = "^1.10.2"
streamlit = "^1.49.1"
fastapi = "^0.116.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.1.0"
flake8 = "^7.3.0"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
